remove intellij project files and restructure the project to bettwer work with bazel

--- a/src/main/scala/lucassonnabend/finiteautomata/BUILD
+++ b/src/main/scala/lucassonnabend/finiteautomata/BUILD
@@ -2,6 +2,11 @@ load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", 
 
 scala_library(
 	name = "finiteAutomata",
-	srcs = glob(["main.*.scala"]),
-	visibility = ["//visibility:public"]
+	srcs = [
+		"DFA.scala",
+		"NFA.scala",
+		"ParsingException.scala",
+		"RegexSimplifier.scala",
+	],
+	visibility = ["//visibility:public"],
 )
