add pants BUILD files

--- a/src/main/scala/lucassonnabend/finiteautomata/BUILD
+++ b/src/main/scala/lucassonnabend/finiteautomata/BUILD
@@ -1,12 +1,4 @@
-load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")
-
 scala_library(
-	name = "finiteAutomata",
-	srcs = [
-		"DFA.scala",
-		"NFA.scala",
-		"ParsingException.scala",
-		"RegexSimplifier.scala",
-	],
-	visibility = ["//visibility:public"],
+	name="finiteautomata",
+	sources=["DFA.scala", "NFA.scala", "ParsingException.scala", "RegexSimplifier.scala"],
 )
