--- a/src/test/scala/lucassonnabend/finiteautomata/BUILD
+++ b/src/test/scala/lucassonnabend/finiteautomata/BUILD
@@ -1,25 +1,8 @@
-load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")
-
-scala_test(
-	name = "testDFA",
-	size = "small",
-	srcs = [
-		"DFATest.scala",
-		"TestRegexes.scala",
+junit_tests(
+	name='DFATest',
+	dependencies=[
+		'src/main/scala/lucassonnabend/finiteautomata:finiteautomata',
+		'3rdparty:scalatest',
 	],
-	deps = [
-		"//src/main/scala/lucassonnabend/finiteautomata:finiteAutomata",
-	],
-)
-
-scala_test(
-	name = "testNFA",
-	size = "small",
-	srcs = [
-		"NFATest.scala",
-		"TestRegexes.scala",
-	],
-	deps = [
-		"//src/main/scala/lucassonnabend/finiteautomata:finiteAutomata",
-	],
+	sources=['DFATest.scala', 'TestRegexes.scala'],
 )
