add more test goals

--- a/src/test/scala/lucassonnabend/finiteautomata/BUILD
+++ b/src/test/scala/lucassonnabend/finiteautomata/BUILD
@@ -1,8 +1,32 @@
 junit_tests(
-	name='DFATest',
-	dependencies=[
-		'src/main/scala/lucassonnabend/finiteautomata:finiteautomata',
-		'3rdparty:scalatest',
-	],
-	sources=['DFATest.scala', 'TestRegexes.scala'],
+    name = "DFATest",
+    dependencies = [
+        "src/main/scala/lucassonnabend/finiteautomata:finiteautomata",
+        "3rdparty:scalatest",
+    ],
+    sources = [
+        "DFATest.scala",
+        "TestRegexes.scala",
+    ],
+)
+
+junit_tests(
+    name = "NFATest",
+    dependencies = [
+        "src/main/scala/lucassonnabend/finiteautomata:finiteautomata",
+        "3rdparty:scalatest",
+    ],
+    sources = [
+        "NFATest.scala",
+        "TestRegexes.scala",
+    ],
+)
+
+junit_tests(
+    name = "SimlifierTest",
+    dependencies = [],
+    sources = [
+        "RegexSimplifierTest.scala",
+        "TestRegexes.scala",
+    ],
 )
