--- a/pants.ini
+++ b/pants.ini
@@ -1,5 +1,12 @@
 [GLOBAL]
 pants_version: 1.2.1
 
+pythonpath: [
+	"%(buildroot)s/pants-plugins/src/python",
+]
+backend_packages: +[
+	"repositories",
+]
+
 [compile.scalafmt]
 skip: True
