--- a/pants.ini
+++ b/pants.ini
@@ -2,11 +2,24 @@
 pants_version: 1.2.1
 
 pythonpath: [
-	"%(buildroot)s/pants-plugins/src/python",
-]
-backend_packages: +[
-	"repositories",
-]
+        '%(buildroot)s/pants-plugins/src/python',
+    ]
+backend_packages: [
+        'repositories',
+    ]
 
 [compile.scalafmt]
 skip: True
+
+# TODO http://www.pantsbuild.org/publish.html
+# TODO replace repo info with something useful
+[publish.jar]
+ivy_settings: %(pants_supportdir)s/ivy/ivysettings.xml
+repos: {
+    'public': {
+        'resolver': 'maven.example.com',
+        'auth': 'build-support:netrc',
+        'help': 'Configure your ~/.netrc for maven.example.com access.'
+      },
+  }
+
