reformat BUILD file

--- a/src/main/scala/lucassonnabend/finiteautomata/BUILD
+++ b/src/main/scala/lucassonnabend/finiteautomata/BUILD
@@ -1,14 +1,14 @@
 scala_library(
 	name = "finiteautomata",
-	sources=[
-	    "DFA.scala",
-	    "NFA.scala",
-	    "ParsingException.scala",
-	    "RegexSimplifier.scala"
-    ],
-    provides = artifact(
-        org = "lucassonnabend",
-        name = "finiteautomata",
-        repo = public,
-    )
+	sources = [
+		"DFA.scala",
+		"NFA.scala",
+		"ParsingException.scala",
+		"RegexSimplifier.scala"
+	],
+	provides = artifact(
+		org = "lucassonnabend.finiteautomata",
+		name = "finiteautomata",
+		repo = public,
+	)
 )
