pants: add to backend_dependencies instead of overwriting to resolve warning

--- a/pants.ini
+++ b/pants.ini
@@ -4,7 +4,7 @@ pants_version: 1.2.1
 pythonpath: [
         '%(buildroot)s/pants-plugins/src/python',
     ]
-backend_packages: [
+backend_packages: +[
         'repositories',
     ]
 
